Added some styles

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,1 +1,7 @@
-<p>@ 2015</p>
+<footer class="footer">
+	<div class="container">
+    	<p class="pull-right">Página cargada en <%= sprintf('%.3f', (Time.now.usec - @start_time).abs / 1000000.0) %> segundos</p><br class="visible-xs" />
+        <p>© <%= Time.now.year %> Compararenvios.com. <br class="visible-xs">Diseño web y propiedad de <a href="http://rbssoltec.com">RBS Soluciones Tecnológicas</a></p>
+        <br>
+    </div>
+</footer>
