--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -36,3 +36,8 @@ body {
 	h3 {font-size: 17px; margin: 2px;}
 	p {font-size: 15px; margin: 0px;}
 }
+
+footer.footer {
+	border-top: 1px solid #ddd;
+}
+footer.footer .container {padding-top: 20px;}
