--- a/app/views/listings/_form.html.erb
+++ b/app/views/listings/_form.html.erb
@@ -1,7 +1,8 @@
 <%= form_for(@listing, :html => { :multipart => true }) do |f| %>
   <% if @listing.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(@listing.errors.count, "error") %> prohibited this listing from being saved:</h2>
+    <div id="error_explanation" class="alert alert-danger alert-dismissible">
+      <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+      <h4><%= pluralize(@listing.errors.count, "error") %> prohibited this listing from being saved:</h4>
 
       <ul>
       <% @listing.errors.full_messages.each do |message| %>
@@ -12,20 +13,21 @@
   <% end %>
 
   <div class="form-group">
-    <%= f.label :name %><br>
+    <%= f.label :name %>
     <%= f.text_field :name, class: "form-control" %>
   </div>
   <div class="form-group">
-    <%= f.label :description %><br>
+    <%= f.label :description %>
     <%= f.text_area :description, class: "form-control" %>
   </div>
   <div class="form-group">
-    <%= f.label :price %><br>
+    <%= f.label :price %>
     <%= f.text_field :price, class: "form-control" %>
   </div>
   <div class="form-group">
-    <%= f.label :image %><br>
-    <%= f.file_field :image, class: "form-control" %>
+    <%= f.label :image %>
+    <%= f.file_field :image %>
+    <p class="help-block">Las Listas se ven mejor si tienen una foto.</p>
   </div>
   <div class="form-group">
     <%= f.submit class: "btn btn-primary" %>
