--- a/app/views/listings/seller.html.erb
+++ b/app/views/listings/seller.html.erb
@@ -1,23 +1,42 @@
-<div class="row text-center">
-  <% @listings.each do |listing| %>
-    <div class="col-md-3">
-      <div class="thumbnail">
-        <%= link_to image_tag(listing.image.url), listing %>
-        <div class="caption">
-          <h3><%= listing.name %></h3>
-          <p><%= number_to_currency(listing.price, :unit => "€", :format => "%n %u") %></p>
-          <p><%= "Sold by #{listing.user.name}" %></p>
-          <% if (user_signed_in?) && (current_user == listing.user) %>
-            <%= link_to 'Edit', edit_listing_path(listing), class: "btn btn-link" %>
-            <%= link_to 'Destroy', listing, method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-link" %>
-          <% end %>
-        </div>
-      </div>
-    </div>
-  <% end %>
+<div class="panel panel-default">
+  	<div class="panel-body">
+  		<% if user_signed_in? %>
+		  <%= link_to 'New Listing', new_listing_path, class: "btn btn-primary btn-block" %>
+		<% end %>
+		<hr>
+		<table class="table table-striped">
+			<thead>
+				<tr>
+					<th>Image</th>
+					<th>Name</th>
+					<th>Description</th>
+					<th>Price</th>
+					<th>Action</th>
+				</tr>
+			</thead>
+			<tbody>
+			<% @listings.each do |listing| %>
+				<tr>
+					<th scope="row"><%= image_tag listing.image.url(:thumb) %></th>
+					<td><%= listing.name %></td>
+					<td><%= listing.description %></td>
+					<td><%= number_to_currency(listing.price, :unit => "€", :format => "%n %u") %></td>
+					<td>
+						<div class="btn-group">
+						  <button type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown" aria-expanded="false">
+						    Action <span class="caret"></span>
+						  </button>
+						  <ul class="dropdown-menu" role="menu">
+						    <li><%= link_to "View", listing, class: "btn btn-link" %></li>
+						    <li><%= link_to "Edit", edit_listing_path(listing), class: "btn btn-link" %></li>
+						    <li class="divider"></li>
+						    <li><%= link_to 'Destroy', listing, method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-link" %></li>
+						  </ul>
+						</div>
+					</td>
+				</tr>
+			<% end %>
+			</tbody>
+		</table>
+	</div>
 </div>
-
-<br>
-<% if user_signed_in? %>
-  <%= link_to 'New Listing', new_listing_path, class: "btn btn-link" %>
-<% end %>
