--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,2 +1,6 @@
-<h1>About us</h1>
-<p>This is the first rails tutorial</p>
+<section class="contenido">
+	<div class="container">
+		<h1>About us</h1>
+		<p>This is the first rails tutorial</p>
+	</div>
+</section>
