--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,17 +10,17 @@
 </head>
 <body>
 <%= render 'layouts/header' %>
-<div class="container">
 	<% flash.each do |name, msg| %>
-		<% if msg.is_a?(String) %>
-			<div class="alert alert-<%= name.to_s == "notice" ? "success" : "danger" %> alert-dismissable", role: "alert" >
-			<button type="button" class="close" data-dismiss="alert" aria-hidden="true"><span aria-hidden="true">&times;</span></button>
-			<%= content_tag :div, msg, :id => "flash_#{name}" %>
-			</div>
-		<% end %>
+		<div class="container" id="alertas">
+			<% if msg.is_a?(String) %>
+				<div class="alert alert-<%= name.to_s == "notice" ? "success" : "danger" %> alert-dismissable", role: "alert" >
+				<button type="button" class="close" data-dismiss="alert" aria-hidden="true"><span aria-hidden="true">&times;</span></button>
+				<%= content_tag :div, msg, :id => "flash_#{name}" %>
+				</div>
+			<% end %>
+		</div>
 	<% end %>
 	<%= yield %>
-</div>
 <%= render 'layouts/footer' %>
 </body>
 </html>
