--- a/app/views/listings/index.html.erb
+++ b/app/views/listings/index.html.erb
@@ -1,19 +1,24 @@
-<div class="row text-center">
-  <% @listings.each do |listing| %>
-    <div class="col-md-3">
-      <div class="thumbnail">
-        <%= link_to image_tag(listing.image.url), listing %>
-        <div class="caption">
-          <h3><%= listing.name %></h3>
-          <p><%= number_to_currency(listing.price, :unit => "€", :format => "%n %u") %></p>
-          <p><%= "Sold by #{listing.user.name}" %></p>
-        </div>
-      </div>
-    </div>
-  <% end %>
-</div>
+<%= render 'layouts/slider' %>
+<section class="contenido">
+	<div class="container">
+		<div class="row text-center">
+			<% @listings.each do |listing| %>
+				<div class="col-md-3">
+					<div class="thumbnail">
+						<%= link_to image_tag(listing.image.url), listing %>
+						<div class="caption">
+							<h3><%= listing.name %></h3>
+							<p><%= number_to_currency(listing.price, :unit => "€", :format => "%n %u") %></p>
+							<p><%= "Sold by #{listing.user.name}" %></p>
+						</div>
+					</div>
+				</div>
+			<% end %>
+		</div>
 
-<br>
-<% if user_signed_in? %>
-  <%= link_to 'New Listing', new_listing_path, class: "btn btn-link" %>
-<% end %>
+	  <br>
+		<% if user_signed_in? %>
+			<%= link_to 'New Listing', new_listing_path, class: "btn btn-link" %>
+		<% end %>
+	</div>
+</section>
