--- a/app/views/listings/show.html.erb
+++ b/app/views/listings/show.html.erb
@@ -1,18 +1,23 @@
-<div class="row">
-	<div class="col-md-6">
-		<div class="thumbnail">
-			<%= image_tag @listing.image.url, class: "img-responsive" %>
+<section class="contenido">
+	<div class="container">
+		<div class="row">
+			<div class="col-md-6">
+				<div class="thumbnail">
+					<%= image_tag @listing.image.url, class: "img-responsive" %>
+				</div>
+			</div>
+			<div class="col-md-6">
+				<h3><%= @listing.name %></h3>
+				<p><%= number_to_currency(@listing.price, :unit => "€", :format => "%n %u") %></p>
+				<p><%= @listing.description %></p>
+				<%= link_to 'Buy It Now', new_listing_order_path(@listing), class: "btn btn-primary btn-lg btn-block" %>
+
+			</div>
 		</div>
-	</div>
-	<div class="col-md-6">
-		<h3><%= @listing.name %></h3>
-		<p><%= number_to_currency(@listing.price, :unit => "€", :format => "%n %u") %></p>
-		<p><%= @listing.description %></p>
 
+		<% if current_user == @listing.user %>
+			<%= link_to 'Edit', edit_listing_path(@listing), class: "btn btn-link" %> |
+		<% end %>
+		<%= link_to 'Back', root_path, class: "btn btn-link" %>
 	</div>
-</div>
-
-<% if current_user == @listing.user %>
-	<%= link_to 'Edit', edit_listing_path(@listing), class: "btn btn-link" %> |
-<% end %>
-<%= link_to 'Back', listings_path, class: "btn btn-link" %>
+</section>
