--- a/app/views/orders/edit.html.erb
+++ b/app/views/orders/edit.html.erb
@@ -1,9 +1,10 @@
 <section class="contenido">
 	<div class="container">
-		<h1>New listing</h1>
+		<h1>Editing Order</h1>
 
 		<%= render 'form' %>
 
-		<%= link_to 'Back', listings_path, class: "btn btn-link" %>
+		<%= link_to 'Show', @order %> |
+		<%= link_to 'Back', orders_path %>
 	</div>
 </section>
