--- a/app/views/orders/new.html.erb
+++ b/app/views/orders/new.html.erb
@@ -1,9 +1,9 @@
 <section class="contenido">
 	<div class="container">
-		<h1>New listing</h1>
+		<h1>New Order</h1>
 
 		<%= render 'form' %>
 
-		<%= link_to 'Back', listings_path, class: "btn btn-link" %>
+		<%= link_to 'Back', listing_path(@listing) %>
 	</div>
 </section>
