--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -1,1 +1,5 @@
-<h1>Email at bubu@bubu.com</h1>
+<section class="contenido">
+	<div class="container">
+		<h1>Email at bubu@bubu.com</h1>
+	</div>
+</section>
