--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,14 +11,11 @@
 <body>
 <%= render 'layouts/header' %>
 	<% flash.each do |name, msg| %>
-		<div class="container" id="alertas">
 			<% if msg.is_a?(String) %>
-				<div class="alert alert-<%= name.to_s == "notice" ? "success" : "danger" %> alert-dismissable", role: "alert" >
-				<button type="button" class="close" data-dismiss="alert" aria-hidden="true"><span aria-hidden="true">&times;</span></button>
-				<%= content_tag :div, msg, :id => "flash_#{name}" %>
-				</div>
+				<script type="text/javascript">					
+					swal("Good job!", "<%= msg %>", "<%= name.to_s == "notice" ? "success" : "danger" %>")
+				</script>
 			<% end %>
-		</div>
 	<% end %>
 	<%= yield %>
 <%= render 'layouts/footer' %>
