--- a/app/views/listings/edit.html.erb
+++ b/app/views/listings/edit.html.erb
@@ -5,6 +5,6 @@
 		<%= render 'form' %>
 
 		<%= link_to 'Show', @listing, class: "btn btn-link" %> |
-		<%= link_to 'Back', listings_path, class: "btn btn-link" %>
+		<%= link_to 'Back', seller_path, class: "btn btn-link" %>
 	</div>
 </section>
