--- a/app/views/listings/show.html.erb
+++ b/app/views/listings/show.html.erb
@@ -18,6 +18,6 @@
 		<% if current_user == @listing.user %>
 			<%= link_to 'Edit', edit_listing_path(@listing), class: "btn btn-link" %> |
 		<% end %>
-		<%= link_to 'Back', root_path, class: "btn btn-link" %>
+		<%= link_to 'Home', root_path, class: "btn btn-link" %>
 	</div>
 </section>
